maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: ';' expected but ',' found.
  var xb,yb:Int,Int = trouve_baggle()
               ^